# conflic

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/examples/: baseline-workflow.yml  pr-diff-scan.yml  sarif-upload.yml  simple-gate.yml
.github/workflows/: ci.yml  release.yml  test-action.yml  vscode-release.yml
scripts/: install-conflic.sh  run-conflic.sh
src/: baseline.rs  cli.rs  config.rs  drift.rs  error.rs  federation.rs  graph.rs  history.rs  impact.rs  lib.rs  main.rs  pathing.rs  pipeline.rs  planning.rs  plugin.rs  policy.rs  promote.rs  topology.rs  workspace.rs
src/discover/: mod.rs  walk.rs
src/enrich/: cache.rs  eol.rs  mod.rs
src/extract/: custom.rs  dotnet_version.rs  go_version.rs  helm.rs  java_version.rs  kubernetes.rs  mod.rs  node_version.rs  port.rs  python_version.rs  ruby_version.rs  runtime_version.rs  terraform.rs  ts_strict.rs
src/fix/: mod.rs  patcher.rs  planner.rs  render.rs
src/lsp/: code_actions.rs  diagnostics.rs  mod.rs  navigation.rs  server.rs  state.rs  text_document.rs
src/model/: assertion.rs  concept.rs  finding.rs  mod.rs  semantic_type.rs
src/parse/: dockerfile.rs  env.rs  extends.rs  json.rs  mod.rs  plain_text.rs  source_location.rs  toml_parser.rs  xml.rs  yaml.rs
src/report/: doctor.rs  json.rs  mod.rs  sarif.rs  terminal.rs
src/solve/: boolean.rs  constraint.rs  findings.rs  mod.rs  monorepo.rs  port.rs  registry.rs  severity.rs  solver_trait.rs  string.rs  version.rs
src/tests/: mod.rs
tests/: e2e_cli.rs  integration.rs
tests/common/: e2e_helpers.rs  integration_helpers.rs  mod.rs
tests/e2e/: baseline.rs  basic.rs  config.rs  diff.rs  fix.rs  lsp.rs  monorepo.rs  port.rs
tests/integration/: core.rs  custom_extractor.rs  diff.rs  docker.rs  dotnet.rs  fix.rs  incremental.rs  java.rs  monorepo.rs  node.rs  output.rs  policy.rs  port.rs  python.rs  ruby.rs  ts.rs  yaml.rs
vscode-conflic/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vscode-conflic/src/: binaryResolver.ts  client.ts  commands.ts  conceptTreeView.ts  configuration.ts  constants.ts  extension.ts  statusBar.ts
(+22 files in other folders)
