[package]
name = "conflic"
version = "2.0.0"
edition = "2024"
description = "Detect semantic contradictions across config files"
license = "MIT"
rust-version = "1.85"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"
json5 = "0.4"

# Version parsing
semver = "1.0"
node-semver = "2.2"

# File discovery
ignore = "0.4"
globset = "0.4"

# Parallelism
rayon = "1.11"

# Output
owo-colors = "4.3"

# Regex
regex = "1.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# LSP (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["lsp"]
lsp = ["dep:tower-lsp", "dep:tokio"]

[dev-dependencies]
tempfile = "3.27"
pretty_assertions = "1.4"
