[package]
name = "conflic"
version = "1.1.6"
edition = "2024"
description = "Detect semantic contradictions across config files"
license = "MIT"
rust-version = "1.94"
repository = "https://github.com/conflic/conflic"
homepage = "https://github.com/conflic/conflic"
readme = "README.md"
keywords = ["config", "lint", "devops", "ci", "contradictions"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", ".claude/", ".history/", "tests/fixtures/"]

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.22"
toml = "1.0"
json5 = "1.3"

# Version parsing
semver = "1.0"
node-semver = "2.2"

# File discovery
ignore = "0.4"
globset = "0.4"

# Parallelism
rayon = "1.11"

# Output
owo-colors = "4.3"

# Regex
regex = "1.12"
quick-xml = "0.38"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# LSP (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Wasm plugins (optional)
wasmi = { version = "0.40", optional = true }

[features]
default = ["lsp"]
lsp = ["dep:tower-lsp", "dep:tokio"]
wasm = ["dep:wasmi"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.27"
pretty_assertions = "1.4"
